--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-NEXT_PUBLIC_SERVICE_ID="Enter your service id here"
-NEXT_PUBLIC_TEMPLATE_ID="Enter your template id here"
-NEXT_PUBLIC_PUBLIC_KEY="Enter your public key here"
+NEXT_PUBLIC_SERVICE_ID=service_7hpq3s3
+NEXT_PUBLIC_TEMPLATE_ID=template_l45hzuu
+NEXT_PUBLIC_PUBLIC_KEY=3z8FuUCvJdJ0m38qR
 
 # Following env variables should be replaced with your own hosted github stats 
 
